docs/deployment/eks/kubernetes/johnny-johnny-agent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: johnny-johnny-agent
  namespace: johnny-johnny
spec:
  type: ClusterIP
  selector:
    app: johnny-johnny-agent
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
